--- a/indeed/templates/indeed/home.html
+++ b/indeed/templates/indeed/home.html
@@ -5,7 +5,6 @@
 {% block head_title %}{% trans "Dashboard" %}{% endblock %}
 
 {% block content %}
-
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -14,35 +13,29 @@
     </div>
     <div class="row">
       <div class="col-md-9">
-
-		<table id="trades" class="display" cellspacing="0" width="100%">
-			<thead>
-			    <tr>
-			        <th>Trade title</th>
-			        <th>No of jobs</th>
-			    </tr>
-			</thead>
-	 
-			<tfoot>
-			    <tr>
-			        <th>Trade title</th>
-			        <th>No of jobs</th>
-			    </tr>
-			</tfoot>
-	 
-			<tbody>
-				{%for trade in trades %}
-				   <tr>
-					    <td><a href="/search_indeed/?query={{trade.query}}"> {{trade.name}}</a></td>
-					    <td>{{trade.job_counts}}</td>
-				   </tr>
-				{%endfor%}
-			</tbody>
-		</table>
-
+        <table class="table table-striped table-bordered table-hover display" id="trades" cellspacing="0" width="100%">
+            <thead>
+              <tr>
+                <th>Trade title</th>
+                <th>No of jobs</th>
+              </tr>
+            </thead>
+            <tfoot>
+              <tr>
+                <th>Trade title</th>
+                <th>No of jobs</th>
+              </tr>
+            </tfoot>
+            <tbody>
+              {% for trade in trades %}
+                <tr>
+                  <td><a href="/search_indeed/?query={{trade.query}}"> {{trade.name}}</a></td>
+                  <td>{{trade.job_counts}}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+        </table>
       </div>
     </div>
-
   </div>
-
 {% endblock %}
