--- a/indeed/templates/indeed/home.html
+++ b/indeed/templates/indeed/home.html
@@ -7,12 +7,7 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <h4 class="page-head-line">{% trans "Trades" %}</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-9">
+      <div class="col-md-9" style="margin: auto; float: none;">
         <table class="table table-striped table-bordered table-hover display" id="trades" cellspacing="0" width="100%">
             <thead>
               <tr>
