--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
             <div class="col-md-12">
               <div class="navbar-collapse collapse ">
                 <ul id="menu-top" class="nav navbar-nav navbar-right">
-                  <li><a class="menu-top-active" href="#">Dashboard</a></li>
+                  <li><a class="menu-top-active" href="/">Dashboard</a></li>
                   {% if not user.is_authenticated %}
                     <li><a href="{% url 'account_login' %}">Login</a></li>
                   {% endif %}
