--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -5,18 +5,39 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Sign Up" %}</h1>
-
-<p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to login to
-{{site_name}}. As a final step, please complete the following form:{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
-
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h4 class="page-head-line">{% trans "Sign Up" %}</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to login to {{site_name}}. As a final step, please complete the following form:{% endblocktrans %}</p>
+        <hr />
+        {% if not form.is_valid and form.non_field_errors.as_text %}
+          <div class="alert alert-danger">{{form.non_field_errors.as_text}}</div>
+        {% endif %}
+        <form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
+          {% csrf_token %}
+          <label for="id_username">Username:</label>
+          <input type="text" placeholder="Username" name="username" maxlength="30" id="id_username" class="form-control" value="{% if form.username.value %}{{form.username.value}}{% else %}{% endif %}">
+          {% if not form.is_valid and form.errors.username.as_text %}
+            <div class="alert alert-danger">{{form.errors.username.as_text}}</div>
+          {% endif %}
+          <label for="id_email">E-mail:</label>
+          <input type="email" placeholder="E-mail address" name="email" id="id_email"  class="form-control" value="{% if form.email.value %}{{form.email.value}}{% else %}{% endif %}">
+          {% if not form.is_valid and form.errors.email.as_text %}
+            <div class="alert alert-danger">{{form.errors.email.as_text}}</div>
+          {% endif %}
+          {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          {% endif %}
+          <button class="btn btn-info" type="submit"><span class="glyphicon glyphicon-user"></span> &nbsp;{% trans "Sign Up" %} &raquo;</button>
+        </form>
+      </div>
+      <div class="col-md-6">
+      </div>
+    </div>
+  </div>
 {% endblock %}
