--- a/templates/socialaccount/connections.html
+++ b/templates/socialaccount/connections.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-6">
         {% if form.accounts %}
           <p>{% blocktrans %}You can sign in to your account using any of the following third party accounts:{% endblocktrans %}</p>
           <form method="post" action="{% url 'socialaccount_connections' %}">
@@ -40,7 +40,8 @@
         {% else %}
           <p>{% trans 'You currently have no social network accounts connected to this account.' %}</p>
         {% endif %}
-
+      </div>
+      <div class="col-md-6">
         <h2>{% trans 'Add a 3rd Party Account' %}</h2>
         <ul class="socialaccount_providers">
           {% include "socialaccount/snippets/provider_list.html" with process="connect" %}
