fine-tune over profile/social connections

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
                       <div class="dropdown-menu dropdown-settings">
                         <div style="color: rgb(51, 51, 51);">Welcome, {{user.first_name}}</div>
                         <hr style="border-color: rgb(51, 51, 51);">
-                        <a href="/accounts/profile/" class="btn btn-info btn-sm">Full Profile</a>&nbsp;<a href="{% url 'account_logout' %}" class="btn btn-danger btn-sm">Logout</a>
+                        <a href="/accounts/profile/" class="btn btn-info btn-sm">Account Profile</a>&nbsp;<a href="{% url 'account_logout' %}" class="btn btn-danger btn-sm">Logout</a>
                       </div>
                     </li>
                   </ul>
