--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,15 +5,46 @@
 {% block head_title %}{% trans "Profile" %}{% endblock %}
 
 {% block content %}
-  <div class="container">
+
+
+<div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h4 class="page-head-line">{% trans "Profile" %}</h4>
+        <h4 class="page-head-line">{% trans "Account Profile" %}</h4>
       </div>
     </div>
+    {% if user.is_authenticated %}
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="well well-sm">
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive" />
+                    </div>
+                    <div class="col-sm-6 col-md-8">
+                        <h4>
+                            {{user.first_name}} {{user.last_name}}</h4>
+                        <small>
+                            <i class="glyphicon glyphicon-user"></i> username : <cite title="{{user.username}}"> {{user.username}} </cite>
+                        </small>
+                        <p>
+                            <i class="glyphicon glyphicon-envelope"></i> {{user.email}}
+                            <br />
+                            <i class="glyphicon glyphicon-time"></i> {{user.date_joined}}</p>
+                            <!-- Split button -->
+                            <div class="btn-group">
+                                <a href="/accounts/social/connections/">
+                                    <button type="button" class="btn btn-primary">
+                                        Social Account Connections
+                                    </button>
+                                </a>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-  </div>
+    {% endif%}
+</div>
+
 {% endblock %}
