Feedback page - started implementation

--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,7 @@
       <footer>
         <div class="container">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-9">
               <a href="http://vanbit.io/" target="_blank">vanbit.io</a>
               {%if indeed_logo %}
                 |		
@@ -124,6 +124,12 @@
                 </span> 
               {%endif%}		
             </div>
+
+
+            <div class="col-md-3">
+              <a href="/feedback">Feedback</a>
+            </div>
+
           </div>
         </div>
       </footer>
