--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,7 +35,7 @@
                             <div class="btn-group">
                                 <a href="/accounts/social/connections/">
                                     <button type="button" class="btn btn-primary">
-                                        Social Account Connections
+                                        Social Account Connections »
                                     </button>
                                 </a>
                             </div>
