--- a/indeed/static/indeed/css/style.css
+++ b/indeed/static/indeed/css/style.css
@@ -301,3 +301,4 @@ footer a, footer a:hover {
 table.dataTable tbody th, table.dataTable tbody td{
     padding: 2px 10px !important;
 }
+.footer{clear: both; margin: 0px auto; text-align: center;}
