--- a/indeed/templates/indeed/feedback.html
+++ b/indeed/templates/indeed/feedback.html
@@ -2,53 +2,37 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Dashboard" %}{% endblock %}
+{% block head_title %}{% trans "Feedback" %}{% endblock %}
 
 {% block content %}
-<div class="container">
+  <div class="container">
     <div class="row col-lg-6" style="margin: auto; float: none;">
-        {% if error == 0 %}
-            <div class="alert alert-success">
-                <strong><span class="glyphicon glyphicon-send"></span> Success! your feedback has been sent!</strong>
-            </div>	  
-        {% endif%}
-
-        {% if error == 1 %}
-            <div class="alert alert-danger">
-                <span class="glyphicon glyphicon-alert"></span>
-                <strong> Error! Please check the inputs. (feedback!)</strong>
-            </div>
-        {% endif%}     
-
-        <div>
-            <form role="form" action="/feedback/" method="post" >
-                <h3 style="margin-bottom: 25px;"> Feedback Form</h3>
-                {% csrf_token %}
-                <div class="col-lg-9">
-                    <div class="form-group">
-                    <label for="InputName">Your Name</label>
-                    <div class="input-group">
-                    <input type="text" class="form-control" name="name" id="InputName" placeholder="Enter Name">
-                    <span class="input-group-addon"></span></div>
-                    </div>
-                    <div class="form-group">
-                    <label for="InputEmail">Your Email</label>
-                    <div class="input-group">
-                    <input type="email" class="form-control" id="InputEmail" name="email" placeholder="Enter Email">
-                    <span class="input-group-addon"></span></div>
-                    </div>
-                    <div class="form-group">
-                    <label for="InputMessage">Feedback</label>
-                    <div class="input-group"
-                    >
-                    <textarea name="feedback" id="InputMessage" class="form-control" rows="5"></textarea>
-                    <span class="input-group-addon"></span></div>
-                    </div>
-
-                    <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info pull-right">
-                </div>
-            </form>
+      <form role="form" action="{% url 'feedback' %}" method="post" >
+        <h3 style="margin-bottom: 25px;">Feedback Form</h3>
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="InputName">Your Name</label>
+          <input type="text" class="form-control" name="name" id="InputName" placeholder="Enter Name" value="{% if form.name.value %}{{form.name.value}}{% else %}{% endif %}">
+          {% if not form.is_valid and form.errors.name.as_text %}
+            <div class="alert alert-danger">{{form.errors.name.as_text}}</div>
+          {% endif %}
         </div>
+        <div class="form-group">
+          <label for="InputEmail">Your Email</label>
+          <input type="email" class="form-control" id="InputEmail" name="email" placeholder="Enter Email" value="{% if form.email.value %}{{form.email.value}}{% else %}{% endif %}">
+          {% if not form.is_valid and form.errors.email.as_text %}
+            <div class="alert alert-danger">{{form.errors.email.as_text}}</div>
+          {% endif %}
+        </div>
+        <div class="form-group">
+          <label for="InputMessage">Feedback</label>
+          <textarea name="feedback" id="InputMessage" class="form-control" rows="5">{% if form.feedback.value %}{{form.feedback.value}}{% else %}{% endif %}</textarea>
+          {% if not form.is_valid and form.errors.feedback.as_text %}
+            <div class="alert alert-danger">{{form.errors.feedback.as_text}}</div>
+          {% endif %}
+        </div>
+        <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info pull-right">
+      </form>
     </div>
-</div>
+  </div>
 {% endblock %}
