compact vertical space

--- a/indeed/templates/indeed/feedback.html
+++ b/indeed/templates/indeed/feedback.html
@@ -5,9 +5,9 @@
 {% block head_title %}{% trans "Feedback" %}{% endblock %}
 
 {% block content %}
-  <div class="container" style="width: 770px;">
-    
-	<iframe src="https://docs.google.com/forms/d/1ZvRWPJWbaP5sSMLy4KZZHHRpXYQ_qEt5fk0T2MQYK3c/viewform?embedded=true" width="760" height="890" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-
+  <div class="container">
+    <div class="row col-lg-9" style="margin: auto; float: none;">
+      <iframe src="https://docs.google.com/forms/d/1ZvRWPJWbaP5sSMLy4KZZHHRpXYQ_qEt5fk0T2MQYK3c/viewform?embedded=true" width="760" height="890" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    </div>
   </div>
 {% endblock %}
