--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,11 @@
                 </a>
               </span>
               |
-              <a href="{% url 'feedback' %}">Feedback</a>		
+              <a href="{% url 'feedback' %}">Feedback</a>
+              |
+              <a href="#">About</a>
+              |
+              <a href="#">Resources</a>
             </div>
           </div>
         </div>
