--- a/indeed/static/indeed/css/style.css
+++ b/indeed/static/indeed/css/style.css
@@ -18,17 +18,19 @@ body {
 .content-wrapper {
     margin-top: 10px;
     min-height: 600px;
-    padding-bottom: 60px;
+    padding-bottom: 10px;
 }
-
+hr{
+    margin: 10px 0;
+}
 .page-head-line {
     font-weight: 900;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
     border-bottom: 2px solid #A8A4A0;
     text-transform: uppercase;
     color: #000;
     font-size: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
 }
 
 .btn {
