add blank page fo rabout&resources

--- a/templates/base.html
+++ b/templates/base.html
@@ -122,9 +122,9 @@
               |
               <a href="{% url 'feedback' %}">Feedback</a>
               |
-              <a href="#">About</a>
+              <a href="{% url 'about' %}">About</a>
               |
-              <a href="#">Resources</a>
+              <a href="{% url 'resources' %}">Resources</a>
             </div>
           </div>
         </div>
