UI formating changes

--- a/indeed/static/indeed/css/style.css
+++ b/indeed/static/indeed/css/style.css
@@ -63,10 +63,8 @@ background-color:#A8A4A0;
    HEADER SECTION STYLES
  ============================================================ */
 header {
-    background-color: #A8A4A0;
-    color: #fff;
-    padding: 2px 10px;
-    text-align: right;
+    background-color: #fff;
+    border-bottom: 1px solid #f0f0f0;
 }
 
 
@@ -184,15 +182,32 @@ header {
    FOOTER SECTION STYLES
  ============================================================ */
 footer {
-    padding: 10px;
-    color: #000;
-    font-size: 12px;
-    background-color: #A8A4A0;
+    background-color: #fff;
+    border-top: 1px solid #f0f0f0;
+    border-bottom: 1px solid #f0f0f0;
 }
 
-footer a, footer a:hover {
-    color: #000;
+a:hover {
     text-decoration: none;
+}
+a:active {
+    text-decoration: none;
+}
+
+#query {
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    width: 218px;
+}
+
+#location {
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    width: 128px;
 }
 
 /*==============================================
