--- a/indeed/templates/indeed/search.html
+++ b/indeed/templates/indeed/search.html
@@ -14,7 +14,7 @@
               <tr>
                 <th>Title</th>
                 <th>Location</th>
-                <th>Company</th1>
+                <th>Company</th>
                 <th>Age</th>
               </tr>
             </thead>
@@ -22,7 +22,7 @@
               <tr>
                 <th>Title</th>
                 <th>Location</th>
-                <th>Company</th1>
+                <th>Company</th>
                 <th>Age</th>
               </tr>
             </tfoot>
