--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -28,7 +28,7 @@
             <div class="alert alert-danger">{{form.errors.password2.as_text}}</div>
           {% endif %}
           <hr />
-          <button class="btn btn-info" type="submit"><span class="glyphicon glyphicon-lock"></span> &nbsp;{% trans "Change Password" %}</button>
+          <button class="btn-round-border btn btn-info" type="submit"><span class="glyphicon glyphicon-lock"></span> &nbsp;{% trans "Change Password" %}</button>
         </form>
       </div>
     </div>
