--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -27,7 +27,7 @@
             <div class="alert alert-danger">{{form.errors.email.as_text}}</div>
           {% endif %}
           <hr />
-          <button class="btn btn-info" type="submit"><span class="glyphicon glyphicon-lock"></span> &nbsp;{% trans "Reset My Password" %}</button>
+          <button class="btn-round-border btn btn-info" type="submit"><span class="glyphicon glyphicon-lock"></span> &nbsp;{% trans "Reset My Password" %}</button>
         </form>
         <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
       </div>
