--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -31,7 +31,7 @@
                 <div class="alert alert-danger">{{form.errors.password2.as_text}}</div>
               {% endif %}
               <hr />
-              <button class="btn btn-info" type="submit"><span class="glyphicon glyphicon-lock"></span> &nbsp;{% trans "Change Password" %}</button>
+              <button class="btn btn-info btn-round-border" type="submit"><span class="glyphicon glyphicon-lock"></span> &nbsp;{% trans "Change Password" %}</button>
             </form>
           {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
