--- a/templates/profile.html
+++ b/templates/profile.html
@@ -34,7 +34,7 @@
                             <!-- Split button -->
                             <div class="btn-group">
                                 <a href="/accounts/social/connections/">
-                                    <button type="button" class="btn btn-primary">
+                                    <button type="button" class="btn-round-border btn btn-primary">
                                         Social Account Connections »
                                     </button>
                                 </a>
