--- a/templates/socialaccount/connections.html
+++ b/templates/socialaccount/connections.html
@@ -33,7 +33,7 @@
                 {% endwith %}
               {% endfor %}
               <div>
-                <button class="btn btn-info" type="submit"><span class="glyphicon glyphicon-remove"></span> &nbsp;{% trans "Remove" %} &raquo;</button>
+                <button class="btn-round-border btn btn-info" type="submit"><span class="glyphicon glyphicon-remove"></span> &nbsp;{% trans "Remove" %} &raquo;</button>
               </div>
             </fieldset>
           </form>
