--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -33,7 +33,7 @@
           {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <button class="btn btn-info" type="submit"><span class="glyphicon glyphicon-user"></span> &nbsp;{% trans "Sign Up" %} &raquo;</button>
+          <button class="btn-round-border btn btn-info" type="submit"><span class="glyphicon glyphicon-user"></span> &nbsp;{% trans "Sign Up" %} &raquo;</button>
         </form>
       </div>
       <div class="col-md-6">
