--- a/indeed/templates/indeed/home.html
+++ b/indeed/templates/indeed/home.html
@@ -11,13 +11,13 @@
         <table class="table table-striped table-bordered table-hover display" id="trades" cellspacing="0" width="100%">
             <thead>
               <tr>
-                <th>Trade title</th>
+                <th>Trade</th>
                 <th>No of jobs</th>
               </tr>
             </thead>
             <tfoot>
               <tr>
-                <th>Trade title</th>
+                <th>Trade</th>
                 <th>No of jobs</th>
               </tr>
             </tfoot>
