--- a/statics/indeed/css/style.css
+++ b/statics/indeed/css/style.css
@@ -101,16 +101,14 @@ header {
 
 /* USER SETTINGS DIV */
 .user-settings-wrapper .nav > li > a {
-    position: relative;
-    display: block;
-    padding: 15px 18px;
     border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    height: 60px;
-    width: 60px;
-    background-color: #F0677C;
-    color: #fff;
+    color: #000;
+    display: block;
+    height: 35px;
+    margin-top: 10px;
+    padding: 7px 10px 0;
+    position: relative;
+    width: auto;
 }
 
 .user-settings-wrapper {
@@ -128,7 +126,7 @@ header {
 
     .user-settings-wrapper .nav > li > a:hover,.user-settings-wrapper .nav > li > a:focus {
         text-decoration: none;
-        background-color: #C36464!important;
+        background-color: #E6E6E6!important;
     }
 
     .user-settings-wrapper img {
