--- a/templates/about.html
+++ b/templates/about.html
@@ -14,6 +14,9 @@
     
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12">
+        <p>AlbertaTrades.com is a website to help people compare between the different trades available in Alberta and search for jobs.</p>
+		<p>Ideally, it is a place where somebody looking to move to Alberta for work can go to get a better idea of what trade they should enter.</p>
+        <p>It is an ongoing project, so any feedback you can provide for features, improvements, or suggestions are appreciated.</p>
       </div>
     </div>
   </div>
