--- a/indeed/templates/indeed/home.html
+++ b/indeed/templates/indeed/home.html
@@ -7,6 +7,7 @@
 {% block content %}
   <div class="container">
 
+    {%if prev_search_history%}
     <div class="row">
       <div class="col-md-9" style="margin: auto; float: none;">
         <table class="table table-striped table-bordered table-hover display" cellspacing="0" width="100%">
@@ -31,7 +32,7 @@
         </table>
       </div>
     </div>
-
+    {%endif%}
 
     <div class="row">
       <div class="col-md-9" style="margin: auto; float: none;">
