UI changes and requested fixes

--- a/indeed/static/indeed/css/style.css
+++ b/indeed/static/indeed/css/style.css
@@ -70,6 +70,16 @@ header {
 }
 
 
+#job_listing_filter label input {
+  display: inherit;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
 /* =============================================================
    LOGO SECTION STYLES
  ============================================================ */
