--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-3">
-              <a href="{% url 'home' %}" class="logo"><b>Alberta Trades</b></a>
+              <a href="{% url 'home' %}" class="logo">Alberta Trades</a>
             </div>
             <div class="col-md-3">
             </div>
