--- a/indeed/templates/indeed/home.html
+++ b/indeed/templates/indeed/home.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Dashboard" %}{% endblock %}
+{% block head_title %}{% trans "Alberta Trades" %}{% endblock %}
 
 {% block content %}
   <div class="container">
