--- a/indeed/static/indeed/css/style.css
+++ b/indeed/static/indeed/css/style.css
@@ -328,6 +328,9 @@ a:active {
 table tbody th, table tbody td{
     padding: 2px 10px !important;
 }
+table tbody td a{
+    line-height: 30px;
+}
 .footer{clear: both; margin: 0px auto; text-align: center;}
 .login{line-height: 54px; font-weight:bold;}
 .search-form{float: left; line-height: 54px;}
